# dmv1

./: .claudeignore  .env.example  .gcloudignore  .gitignore  .vercelignore  AGENT_README.md  BUILD_PROMPT.md  CLAUDE.md  DASHBOARD_SETUP.md  DATA_MODEL_UPDATE.md  DEPLOY_VERCEL.md  DESIGN.md  Dockerfile.calc-engine  EXCEL_TEMPLATE_CONFIG.ts  EXCEL_UPLOAD_GUIDE.md  GSIB_Data_Model_Dictionary.xlsx  LINEAGE_AND_METRICS_REVIEW.md  LINEAGE_IMPLEMENTATION_SUMMARY.md  LINEAGE_TESTING_CHECKLIST.md  LINEAGE_VISUAL_REFERENCE.md  PLAN_DRAG_ZOOM.md  PUSH_TO_GITHUB.md  QUICK_START.md  README.md  RELEASE_TRACKER.md  RUN_LOCAL.md  RUN_LOCALLY.md  RUN_UPLOAD.md  TEMPLATE_UPDATE_GUIDE.md  TODOS.md  capital-liquidity-metrics.xlsx  knip.json  metrics_import_FINAL_2026-02-17.xlsx  middleware.ts  next.config.js  package-lock.json  package.json  start-dashboard.sh  tailwind.config.ts  vercel.json  (+1 more)
app/: error.tsx  (+5 more)
scenarios/curator/: pyproject.toml
scenarios/curator/curator_factory/: __init__.py
scenarios/curator/curator_factory/cli/: audit_quality.py  generate_metric_scenario.py  generate_scenario.py  generate_variants.py
scenarios/curator/curator_factory/domain_knowledge/: gsib_constants.py  scenario_taxonomy.py
scenarios/curator/curator_factory/models/: __init__.py  quality_report.py  scenario.py  story_arc.py
scenarios/curator/curator_factory/pipelines/: coherence_auditor.py  metric_scenario_gen.py  narrative_to_yaml.py  synthetic_detector.py  variant_generator.py
scenarios/curator/tests/: test_catalogue_loader.py  test_gsib_constants.py  test_models.py  test_yaml_emitter.py
(+1370 files in other folders)
